B&L QA/objects/IOL_Detail__c.object
<CustomObject>
    <description>Used by EMEASU to have relevant information on IOL Data and Competitors tracking</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Used by EMEASU</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IOL Detail</relationshipLabel>
        <relationshipName>IOL_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Used by EMEASU</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>Aaren</fullName>
                </value>
                <value>
                    <fullName>Abbot</fullName>
                </value>
                <value>
                    <fullName>Accomed</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>B+L</fullName>
                </value>
                <value>
                    <fullName>B+L - Akreos Adapt</fullName>
                </value>
                <value>
                    <fullName>B+L - Akreos AO</fullName>
                </value>
                <value>
                    <fullName>B+L - Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>B+L - Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>B+L - Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>B+L - enVista</fullName>
                </value>
                <value>
                    <fullName>B+L - enVista Toric</fullName>
                </value>
                <value>
                    <fullName>B+L - INCISE</fullName>
                </value>
                <value>
                    <fullName>B+L - PMMA</fullName>
                </value>
                <value>
                    <fullName>B+L - SofPort</fullName>
                </value>
                <value>
                    <fullName>Croma/Corneal</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
                <value>
                    <fullName>FranceLens</fullName>
                </value>
                <value>
                    <fullName>Hanita</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Medicontour</fullName>
                </value>
                <value>
                    <fullName>MTO</fullName>
                </value>
                <value>
                    <fullName>Occulentis/Topcon</fullName>
                </value>
                <value>
                    <fullName>Optha France</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used by EMEASU</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Used by EMEASU</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_by_Year__c</fullName>
        <description>Used by EMEASU</description>
        <label>Estimated Volume by Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IOL_Type__c</fullName>
        <description>Used by EMEASU</description>
        <label>IOL Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monofocal</fullName>
                </value>
                <value>
                    <fullName>Toric</fullName>
                </value>
                <value>
                    <fullName>Accommodating</fullName>
                </value>
                <value>
                    <fullName>Multifocal</fullName>
                </value>
                <value>
                    <fullName>Toric-multifocal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>Used by EMEASU</description>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hydrophilic acrylic</fullName>
                </value>
                <value>
                    <fullName>Hydrophobic acrylic</fullName>
                </value>
                <value>
                    <fullName>Silicone</fullName>
                </value>
                <value>
                    <fullName>PMMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Pre-loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <description>Used by EMEASU</description>
        <label>Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st choice</fullName>
                </value>
                <value>
                    <fullName>2nd choice</fullName>
                </value>
                <value>
                    <fullName>3rd choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Used by EMEASU</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yellow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Yellow</label>
        <type>Checkbox</type>
    </fields>
    <label>IOL Detail</label>
    <nameField>
        <displayFormat>IOL-{000000}</displayFormat>
        <label>IOL Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOL Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>